--- a/app/views/partials/theme/simple/activities/feed/index.liquid
+++ b/app/views/partials/theme/simple/activities/feed/index.liquid
@@ -3,7 +3,7 @@
 </div>
 
 <div class="w-full p-3">
-    {% render 'theme/simple/profile/activity_new' %}
+    {% include 'theme/simple/profile/activity_new' %}
   <div class="grid grid-cols-1 gap-6 my-6">
 
     {% for record in list.results %}
