--- a/app/views/partials/theme/simple/comments/new_entry.liquid
+++ b/app/views/partials/theme/simple/comments/new_entry.liquid
@@ -1,4 +1,4 @@
-<form action="/comments" method="post">
+<form action="/comments" method="post" data-comment-new-post>
   {% include 'authenticity_token' %}
   {% liquid
     assign uuid = '' | uuid
@@ -8,17 +8,20 @@
   <input type="hidden" name="comment[uuid]" value="{{uuid}}" />
   <input type="hidden" name="return_to" value="{{context.location.pathname}}" />
   <div class="bg-white shadow rounded-lg p-5 mx-5">
-    <textarea name="comment[body]" class="bg-gray-200 w-full rounded-lg shadow-md p-2" rows="2" placeholder="{{placeholder}}"></textarea>
+    <div class="relative">
+      <textarea name="comment[body]" class="bg-gray-200 w-full rounded-lg shadow-md p-2" rows="2" placeholder="{{placeholder}}"></textarea>
+      <div data-comment-photo-upload class="w-8 h-8 absolute top-0 right-0 mt-5 mr-5 text-gray-600 cursor-pointer" title="images">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" /> </svg>
+      </div>
+    </div>
+    {% render 'theme/simple/photos/uppy_area', class: "hidden mt-5" %}
 
     <div class="w-full flex flex-row flex-wrap mt-3">
       <div class="w-1/3">
-        <!--
-            <select class="w-full p-2 rounded-lg bg-gray-200 shadow border float-left">
+        <!-- <select class="w-full p-2 rounded-lg bg-gray-200 shadow border float-left">
             <option>Public</option>
             <option>Private</option>
-            </select>
-        -->
-
+            </select> -->
       </div>
       <div class="w-2/3">
         <button type="submit" class="float-right button">Send</button>
@@ -26,3 +29,5 @@
     </div>
   </div>
 </form>
+
+{% include 'theme/simple/photos/uppy_form', object_uuid: uuid, presigned_url: presigned_url, user_id: user.id, photo_type: 'main' %}
