--- a/app/views/partials/theme/simple/business_card.liquid
+++ b/app/views/partials/theme/simple/business_card.liquid
@@ -1,9 +1,9 @@
 {% liquid
-  assign name = user.username | default: 'Unknown'
+  assign name = user.name | default: 'Unknown'
 %}
 
 <div class="flex">
-  <span class="business_card mr-2">By <a href="../profile/{{name}}">{% print name %}</a></span>
+  <span class="business_card mr-2">By <a href="/profile/{{user.slug}}">{% print name %}</a></span>
   {% if current_user and current_user.id != user.id %}
     {% render 'theme/simple/follow_button', current_user: current_user, user: user %}
   {% endif %}
