--- a/app/views/pages/users/create.liquid
+++ b/app/views/pages/users/create.liquid
@@ -3,21 +3,13 @@ slug: users
 method: post
 ---
 {% liquid
-  function_rc object = 'lib/commands/users/create/build', object: context.params.user
-  function_rc object = 'lib/commands/users/create/check', object: object
+  function object = 'lib/commands/users/create', object: context.params.user
 
   if object.valid
-    function_rc db_object = 'lib/commands/users/create/execute', object: object
+    function_rc session = 'lib/commands/sessions/create/execute', object: context.params.user
 
-    if db_object.valid
-      function_rc session = 'lib/commands/sessions/create/execute', object: object
-
-      include 'lib/commands/events/create', type: 'account_created', actor_id: db_object.id
-
-      include 'redirect_to', url: '/dashboard', notice: 'app.account.created'
-    else
-    endif
-
+    include 'lib/commands/events/create', type: 'account_created', actor_id: db_object.id
+    include 'redirect_to', url: '/dashboard', notice: 'app.account.created'
   else
     include 'theme/simple/users/new', object: object
   endif
