--- a/app/views/partials/lib/commands/users/create/check.liquid
+++ b/app/views/partials/lib/commands/users/create/check.liquid
@@ -14,21 +14,8 @@
     include 'lib/register_error', contract: c, field_name: 'password', key: 'app.errors.blank'
   endif
 
-  if object.username == blank
-    include 'lib/register_error', contract: c, field_name: 'username', key: 'app.errors.blank'
-  else
-    function_rc users = 'lib/data/queries/users/search', username: object.username, limit: 1
-    if users.total_entries > 0
-      include 'lib/register_error', contract: c, field_name: 'username', key: 'app.errors.taken'
-    endif
-    function_rc users = 'lib/data/queries/users/search', slug: object.slug, limit: 1
-    if users.total_entries > 0
-      include 'lib/register_error', contract: c, field_name: 'username', key: 'app.errors.taken'
-    endif
-  endif
-
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
 
-  return_rc object
+  return object
 %}
