--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -14,7 +14,9 @@
     <h3 class="mb-1 text-xs ">
       {% if item.category %}
         <div>
-          {{ 'categories.' | append: item.category | t }}
+          <a href="/c/{% print item.category %}">
+            {% print 'categories.' | append: item.category | t %}
+          </a>
         </div>
       {% endif %}
       {% comment %}
