--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -15,7 +15,7 @@
         {{ user.first_name }} {{ user.last_name }}
       </div>
       <div class="text-xl text-grey-dark font-light">
-        {{ user.username }}
+        {{ user.name }}
       </div>
     </div>
   </div>
