--- a/app/views/partials/theme/simple/dashboard/profile/uppy_form.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/uppy_form.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  expect presigned_url as item_photo_presigned_url
+  expect presigned_url as presigned_url
 {% endcomment %}
 
 <form action="{{ presigned_url.upload_url }}" data-s3-uppy-profile="form" hidden>
