--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -26,7 +26,7 @@
 
     <div class="mt-3">
       <label class="block">Photos</label>
-      {% include 'theme/simple/items/uppy_area' %}
+      {% include 'theme/simple/photos/uppy_area' %}
     </div>
 
     <div class="mt-3">
@@ -76,4 +76,11 @@
 
 </div>
 
-{% include 'theme/simple/items/uppy_form', item_uuid: item_uuid, presigned_url: presigned_url, user_id: user.id %}
+{% include 'theme/simple/photos/uppy_form',
+  object_uuid: item_uuid,
+  presigned_url: presigned_url,
+  user_id: user.id,
+  photo_type: 'photo',
+  note: 'Images only, up to 3 files, 2MB each',
+  max_number_of_files: 3
+%}
