--- a/app/views/partials/theme/simple/dashboard/profile/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/edit.liquid
@@ -51,4 +51,4 @@
   </div>
 </div>
 
-{% render 'theme/simple/dashboard/profile/uppy_form', presigned_url: helpers.presigned_url %}
+{% render 'theme/simple/dashboard/profile/uppy_form', presigned_url: presigned_url %}
