--- a/app/views/partials/lib/commands/profiles/update/build.liquid
+++ b/app/views/partials/lib/commands/profiles/update/build.liquid
@@ -1,12 +1,31 @@
+{% liquid
+  if profile.slug
+    assign slug = profile.slug
+  else
+  assign name = object.name
+  for i in (1..20)
+    assign slug = name | slugify
+
+    function profiles = 'lib/data/queries/profiles/search', slug: slug, limit: 1
+    if profiles.total_entries == 0
+      break
+    endif
+    assign salt = '' | uuid | split: '-'
+    assign name = object.name | append: '-' | append: salt[1]
+  endfor
+  endif
+%}
+
 {% parse_json object %}
   {
-    "id":          {{ profile.id }},
-    "name":        {{ object.name | json }},
-    "first_name":  {{ object.first_name | json }},
-    "last_name":   {{ object.last_name | json }}
+    "id":         {{ profile.id }},
+    "name":       {{ object.name | json }},
+    "slug":       {{ slug | json }},
+    "first_name": {{ object.first_name | json }},
+    "last_name":  {{ object.last_name | json }}
   }
 {% endparse_json %}
 
 {% liquid
-  return_rc object
+  return object
 %}
