--- a/app/views/partials/theme/simple/groups/about.liquid
+++ b/app/views/partials/theme/simple/groups/about.liquid
@@ -7,7 +7,7 @@
   </h1>
 
   <div class="m-y-5 flex">
-    <img class="h-16 h-16 mr-5" src="{{  group.owner.avatar.versions.small | default: 'https://dummyimage.com/100x100' }}" />
+    <img class="h-16 h-16 mr-5" src="{{  group.owner.avatar.photo.versions.small | default: 'https://dummyimage.com/100x100' }}" />
     {{ group.owner.first_name }} {{ group.owner.last_name }}, Owner
   </div>
 
