--- a/app/views/pages/dashboard/profile/edit.liquid
+++ b/app/views/pages/dashboard/profile/edit.liquid
@@ -3,7 +3,7 @@
 
   function current_user = 'lib/data/queries/users/find', id: context.current_user.id
   function profile = 'lib/data/queries/profiles/find', user_uuid: current_user.uuid
-  graphql presigned_url = 'users/photos/presign' | dig: 'presigned'
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
 
   render 'theme/simple/dashboard/profile/edit', object: profile, presigned_url: presigned_url, context: context
 %}
