--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -1,7 +1,7 @@
 <div class="p-4 md:w-1/3">
   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden pt-5">
     {% liquid
-      assign img_url = user.avatar.versions.small
+      assign img_url = user.avatar.photo.versions.small
       unless img_url
         assign img_url = 'images/user.svg' | asset_url
       endunless
