--- a/app/views/partials/lib/data/queries/profiles/find.liquid
+++ b/app/views/partials/lib/data/queries/profiles/find.liquid
@@ -1,8 +1,8 @@
 {% liquid
-  if uuid == blank and slug == blank and user_uuid == blank
+  if uuid == blank and slug == blank
     return null
   endif
-  graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug, user_uuid: user_uuid
+  graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug
 
   return r.models.results.first
 %}
