--- a/app/views/pages/dashboard/profile/update.liquid
+++ b/app/views/pages/dashboard/profile/update.liquid
@@ -5,12 +5,15 @@ method: put
 {% liquid
   include 'lib/must_be_authenticated'
 
-  function profile = 'lib/data/queries/profiles/find', uuid: context.session.user_profile_uuid
+  function current_user = 'lib/data/queries/users/find', id: context.current_user.id
+  function profile = 'lib/data/queries/profiles/find', uuid: current_user.uuid
+
   function object = 'lib/commands/profiles/update', object: context.params.profile, profile: profile
 
   if object.valid
-    include 'redirect_to', url: '/dashboard/profile/edit'
+    include 'redirect_to', url: '/dashboard'
   else
+  log object, type: 'showme'
     graphql presigned_url = 'users/photos/presign' | dig: 'presigned'
     render 'theme/simple/dashboard/profile/edit', object: object, context: context, presigned_url: presigned_url
   endif
