--- a/app/views/partials/lib/data/queries/profiles/search.liquid
+++ b/app/views/partials/lib/data/queries/profiles/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  graphql r = 'profiles/search', limit: limit, user_uuid: user_uuid, uuid: uuid, id: id, slug: slug
+  graphql r = 'profiles/search', limit: limit, uuid: uuid, id: id, slug: slug
 
   return r.models
 %}
