--- a/app/views/partials/lib/data/queries/helpers.liquid
+++ b/app/views/partials/lib/data/queries/helpers.liquid
@@ -5,7 +5,7 @@
 {% endparse_json %}
 
 {% liquid
-  graphql presigned_url = 'users/photos/presign' | dig: 'presigned'
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
   hash_assign helpers['presigned_url'] = presigned_url
 
   return helpers
