--- a/app/views/partials/lib/data/queries/profiles/find.liquid
+++ b/app/views/partials/lib/data/queries/profiles/find.liquid
@@ -2,7 +2,9 @@
   if uuid == blank and slug == blank
     return null
   endif
+
   graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug
+  include 'lib/handle_graphql_response', r: r, name: 'queries/profiles/find'
 
   return r.models.results.first
 %}
