--- a/app/views/partials/lib/data/queries/users/find.liquid
+++ b/app/views/partials/lib/data/queries/users/find.liquid
@@ -4,6 +4,7 @@
   endif
 
   graphql r  = 'users/search', id: id, email: email, limit: 1, with_token: with_token, with_followed: with_followed, slug: slug
+  include 'lib/handle_graphql_response', r: r, name: 'queries/users/find'
 
   return r.users.results.first
 %}
