--- a/app/views/partials/theme/simple/dashboard/profile/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/edit.liquid
@@ -1,12 +1,3 @@
-{% liquid
-  echo object
-  if object.id
-    assign method = 'put'
-  else
-    assign method = 'post'
-  endif
-%}
-
 <div class="container flex flex-wrap items-center mx-auto mb-10">
   <h1 class="text-2xl">{% print 'app.profiles.edit' | t %}</h1>
 </div>
@@ -14,8 +5,7 @@
   <div class="sm:flex-grow sm:pl-16 sm:order-2">
     <form action="/dashboard/profile" method="post">
       {% render 'authenticity_token', context: context %}
-
-      <input type="hidden" name="_method" value="{% print method %}" />
+      <input type="hidden" name="_method" value="put" />
 
       <div class="mb-6" id="field-firstName">
         <label class="block text-black cursor-pointer mb-2" for="name">{{'app.profiles.username' | t}}</label>
@@ -53,7 +43,7 @@
 </div>
 
 {% render 'theme/simple/photos/uppy_form',
-  object_uuid: object.user_uuid,
+  object_uuid: object.uuid,
   presigned_url: presigned_url,
   user_id: user.id,
   photo_type: 'avatar',
