--- a/app/views/partials/lib/commands/profiles/create/build.liquid
+++ b/app/views/partials/lib/commands/profiles/create/build.liquid
@@ -1,6 +1,7 @@
 {% parse_json object %}
   {
-    "uuid":      {{ user.uuid | json }}
+    "uuid":    {{ '' | uuid | json }},
+    "user_id": {{ user.id | json }}
   }
 {% endparse_json %}
 
