--- a/app/views/partials/lib/commands/users/create/build.liquid
+++ b/app/views/partials/lib/commands/users/create/build.liquid
@@ -2,8 +2,8 @@
   {
     "email":       {{ object.email | json }},
     "password":    {{ object.password | json }},
-    "remember_me": true,
-    "uuid":        {{ '' | uuid | json }}
+    "uuid":        {{ '' | uuid | json }},
+    "remember_me": true
   }
 {% endparse_json %}
 
