--- a/app/views/partials/lib/commands/users/update.liquid
+++ b/app/views/partials/lib/commands/users/update.liquid
@@ -3,7 +3,7 @@
   function_rc object = 'lib/commands/users/update/check', object: object
 
   if object.valid
-    function_rc object = 'lib/commands/users/update/execute', object: object
+    function_rc object = 'lib/commands/', object: object, mutation: 'users/update', selection: 'user_update'
 
     if object.valid
       include 'lib/commands/events/create', type: 'account_updated', actor_id: object.id
