--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -57,7 +57,7 @@
             </svg>
           </a>
           <br/>
-          <a class="inline-flex items-center mt-3 text-indigo-500" href="/profile/{{user.profile.slug}}">{{ 'app.p-dashboard.your-profile' | t }}
+          <a class="inline-flex items-center mt-3 text-indigo-500" href="/profile/{{profile.slug}}">{{ 'app.p-dashboard.your-profile' | t }}
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
