--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -11,7 +11,7 @@
 
   <div class="mr-10">
     <div class="mb-4">
-      <div class="text-3xl font-medium text-grey-darkest">
+      <div class="text-3xl font-medium text-grey-darkest" id="userinfo">
         {{ user.first_name }} {{ user.last_name }}
       </div>
       <div class="text-xl text-grey-dark font-light">
