--- a/app/views/pages/api/items/photos/create.json.liquid
+++ b/app/views/pages/api/items/photos/create.json.liquid
@@ -7,7 +7,7 @@ method: post
   function_rc object = 'lib/commands/item_photos/create/check', object: object
 
   if object.valid
-    function_rc object = 'lib/commands/item_photos/create/execute', object: object
+    function_rc db_object = 'lib/commands/item_photos/create/execute', object: object
 
     include 'theme/json/shared/show', object: object
   endif
