--- a/app/views/pages/api/users/followers/toggle.json.liquid
+++ b/app/views/pages/api/users/followers/toggle.json.liquid
@@ -5,17 +5,17 @@ method: post
 {% liquid
   assign now = 'now' | to_time
 
-  function follower = 'lib/data/queries/users/find', id: context.current_user.id
-  function followed = 'lib/data/queries/users/find', id: context.params.user_id
+  function follower = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function followed = 'lib/data/queries/profiles/find', id: context.params.user_id
 
   if context.params.action_name == 'follow'
     assign event_type = 'user_followed_user'
-    function_rc object = 'lib/commands/relationships/create', name: 'followship', l_uuid: follower.uuid, r_uuid: followed.uuid, l_at: now, r_at: now
+    function_rc object = 'lib/commands/relationships/create', name: 'followship', l_id: follower.id, r_id: followed.id, l_at: now, r_at: now
   endif
 
   if params.action_name == 'unfollow'
     assign event_type = 'user_unfollowed_user'
-    function relation = 'lib/data/queries/relationships/find', name: 'followship', l_uuid: follower.uuid, r_uuid: followed.uuid
+    function relation = 'lib/data/queries/relationships/find', name: 'followship', l_id: follower.id, r_id: followed.id
 
     if relation
       function_rc object = 'lib/commands/relationships/delete', object: relation
@@ -23,7 +23,7 @@ method: post
   endif
 
   if object.valid
-    include 'lib/commands/events/create', type: event_type, actor_id: context.current_user.id, target_id: context.params.user_id
+    include 'lib/commands/events/create', type: event_type, actor_id: follower.id, target_id: followed.id
   endif
 
   render 'theme/json/items/index', response: object
