--- a/app/views/partials/lib/commands/relationships/create/build.liquid
+++ b/app/views/partials/lib/commands/relationships/create/build.liquid
@@ -1,10 +1,10 @@
 {% parse_json object %}
   {
     "name":           {{ name | json }},
-    "l_uuid":         {{ l_uuid | json }},
-    "r_uuid":         {{ r_uuid | json }},
-    "l_activated_at": {{ l_activated_at | json }},
-    "r_activated_at": {{ r_activated_at | json }}
+    "l_id":         {{ l_id | json }},
+    "r_id":         {{ r_id | json }},
+    "l_accepted_at": {{ l_accepted_at | json }},
+    "r_accepted_at": {{ r_accepted_at | json }}
   }
 {% endparse_json %}
 
