--- a/app/views/partials/lib/commands/relationships/create.liquid
+++ b/app/views/partials/lib/commands/relationships/create.liquid
@@ -1,6 +1,6 @@
 
 {%  liquid
-  function object = 'lib/commands/relationships/create/build', name: name, l_uuid: l_uuid, r_uuid: r_uuid, l_activated_at: l_at, r_activated_at: r_at
+  function object = 'lib/commands/relationships/create/build', name: name, l_id: l_id, r_id: r_id, l_accepted_at: l_at, r_accepted_at: r_at
   function object = 'lib/commands/relationships/create/check', object: object
 
   if object.valid
