--- a/app/views/partials/lib/data/queries/profiles/find.liquid
+++ b/app/views/partials/lib/data/queries/profiles/find.liquid
@@ -1,9 +1,9 @@
 {% liquid
-  if uuid == blank and slug == blank
+  if uuid == blank and slug == blank and id == blank and user_id == blank
     return null
   endif
 
-  graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug
+  graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug, id: id, user_id: user_id, followships: followships
   include 'lib/handle_graphql_response', r: r, name: 'queries/profiles/find'
 
   return r.models.results.first
