--- a/app/views/partials/lib/data/queries/relationships/search.liquid
+++ b/app/views/partials/lib/data/queries/relationships/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  graphql r = 'relationships/search', limit: limit, name: name, l_uuid: l_uuid, r_uuid: r_uuid
+  graphql r = 'relationships/search', limit: limit, name: name, l_id: l_id, r_id: r_id
 
   return r.models
 %}
