--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -2,7 +2,7 @@
   function_rc filters = 'lib/data/queries/search/filters', query: context.params
   function_rc items = 'lib/data/queries/items/search', limit: 12, featured: true
 
-  function_rc current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: true
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: true
 
   include 'theme/simple/home/index', items: items, filters: filters, current_user: current_user
 %}
