--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -1,5 +1,5 @@
 {% content_for item_metatags %}
-  {% include 'theme/simple/items/metatags', item: item %}
+  {% render 'theme/simple/items/metatags', item: item %}
 {% endcontent_for %}
 <div class="container">
   <div class="flex flex-wrap">
@@ -34,7 +34,7 @@
 
     <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
       <h2 class="text-sm tracking-widest ">
-        {% include 'theme/simple/business_card', user: item.owner %}
+        {% render 'theme/simple/business_card', user: item.owner, current_user: current_user %}
         <a href="/u/{{ item.owner.id }}">{% print 'app.items.by_user' | t %}</a>
       </h2>
 
@@ -86,7 +86,7 @@
         <form action="/items/delete" method="post" class="ml-2"
           onSubmit="if(!confirm('{{ 'app.confirm-delete' | t }}')){ return false; }"
         >
-          {% include 'authenticity_token' %}
+          {% render 'authenticity_token' %}
           <input type="hidden" name="id" value="{{ item.id }}">
 
           <button id="deletebutton" class="button button-secondary">{{ 'app.delete' | t }}</button>
@@ -98,4 +98,4 @@
   </div>
 </div>
 
-{% include 'theme/simple/items/follow.js' %}
+{% render 'theme/simple/items/follow.js' %}
